<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/a_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/list_head_color"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="" />

    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/cut_line" >
    </LinearLayout>

    <TextView
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/strFrmType"
        android:textColor="@color/button_text"
        android:textSize="@dimen/form_text_font_size" />

    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/cut_line" >
    </LinearLayout>

    <TextView
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="@color/button_text"
        android:textSize="@dimen/form_text_font_size"
        android:text="@string/strFrmFormat" />

    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/cut_line" >
    </LinearLayout>

    <TextView
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="@color/button_text"
        android:textSize="@dimen/form_text_font_size"
        android:text="@string/strID" />

    <LinearLayout
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/cut_line" >
    </LinearLayout>

    <TextView
        android:layout_width="160dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:textColor="@color/button_text"
        android:textSize="@dimen/form_text_font_size"
        android:gravity="center"
        android:text="@string/strData" />

</LinearLayout>