<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_title_custom_dialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@mipmap/title_header"
        android:gravity="center"
        android:text="@string/strSet"
        android:textColor="@color/button_text"
        android:textSize="@dimen/dlg_title_font_size" />

    <ScrollView
        android:id="@+id/scrollViewsetting"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical" >


            <LinearLayout
                android:id="@+id/RelativeLayoutIpAddr"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/control_backgroup"
                android:clickable="true"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/textViewIpAddrLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:gravity="center"
                        android:text="@string/strIpAddr"
                        android:textColor="@color/button_text"
                        android:textSize="@dimen/default_font_size" />

                    <EditText
                        android:id="@+id/textViewIpAddr"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:gravity="center"
                        android:text="192.168.27.22"
                        android:textColor="@color/button_text" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gainsboro" >
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LayoutTargetPort"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:background="@color/white" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:gravity="center"
                        android:text="@string/strWorkPort"
                        android:textColor="@color/button_text"
                        android:textSize="@dimen/default_font_size" />

                    <com.changan.changanproject.view.RangeEditText
                        android:id="@+id/EditTextTargetPort"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:gravity="center"
                        android:inputType="number"
                        android:selectAllOnFocus="true"
                        custom:cur="4001"
                        custom:min="0"
                        custom:max="65536"
                        android:textColor="@color/button_text"
                        android:textSize="16sp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gainsboro" >
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LayoutErrNotice"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:gravity="center"
                        android:text="@string/strErrNoticePort"
                        android:textColor="@color/button_text"
                        android:textSize="@dimen/default_font_size" />

                    <com.changan.changanproject.view.RangeEditText
                        android:id="@+id/EditTextErrNoticePort"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:gravity="center"
                        android:inputType="number"
                        android:selectAllOnFocus="true"
                        android:textColor="@color/button_text"
                        custom:cur="5001"
                        custom:min="0"
                        custom:max="65536"
                        android:textSize="16sp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gainsboro" >
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/connect_btn_bg"
        android:gravity="center"
        android:text="保存"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_font_size" />

</LinearLayout>